CB-12621: reverted elementtree dep to 0.1.6

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cordova-common": "^2.0.1",
-    "elementtree": "^0.1.6",
+    "elementtree": "0.1.6",
     "nopt": "^3.0.1",
     "properties-parser": "^0.2.3",
     "q": "^1.4.1",
