--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "jshint": "^2.6.0",
     "promise-matchers": "~0",
     "rewire": "^2.1.3"
-  }
+  },
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "engineStrict": true
 }
