--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -40,7 +40,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'org.apache.cordova'
-version = '6.2.0'
+version = '6.3.0-dev'
 
 android {
     compileSdkVersion cdvCompileSdkVersion
@@ -127,9 +127,9 @@ bintray {
         licenses = ['Apache-2.0']
         labels = ['android', 'cordova', 'phonegap']
         version {
-            name = version
+            name = '6.3.0-dev'
             released  = new Date()
-            vcsTag = version
+            vcsTag = '6.3.0-dev'
         }
     }
 }
