--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-android",
-  "version": "6.2.2",
+  "version": "6.3.0-dev",
   "description": "cordova-android release",
   "bin": {
     "create": "bin/create"
