Adding conditional code into Gradle, this is a bit dirty since we can't explicitly test it but we'll just have to rely on jasmine

--- a/bin/templates/project/app/build.gradle
+++ b/bin/templates/project/app/build.gradle
@@ -98,10 +98,12 @@ if (hasBuildExtras) {
 
 // Set property defaults after extension .gradle files.
 if (ext.cdvCompileSdkVersion == null) {
-    ext.cdvCompileSdkVersion = project.ext.defaultCompileSdkVersion
+    ext.cdvCompileSdkVersion = privateHelpers.getProjectTarget()
+    //ext.cdvCompileSdkVersion = project.ext.defaultCompileSdkVersion
 }
 if (ext.cdvBuildToolsVersion == null) {
-    ext.cdvBuildToolsVersion = project.ext.defaultBuildToolsVersion
+    ext.cdvBuildToolsVersion = privateHelpers.findLatestInstalledBuildTools()
+    //ext.cdvBuildToolsVersion = project.ext.defaultBuildToolsVersion
 }
 if (ext.cdvDebugSigningPropertiesFile == null && file('debug-signing.properties').exists()) {
     ext.cdvDebugSigningPropertiesFile = 'debug-signing.properties'
